# alfred-scripts

./: Makefile  README.md  cloudwatch-log.py  convert-to-json.py  pptx-to-pdf.py  pyproject.toml
fuel-price-finder/: .python-version  README.md  fuel-prices.ipynb  fuel-prices.py  install.sh  run.sh
local_setup/: setup.sh
